--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-- Google Market: https://market.android.com/details?id=com.cabelo.droidOpenDataBr
--
+- Google Play (Antigo Market): https://play.google.com/store/apps/details?id=com.cabelo.droidOpenDataBr
+
 
